test/kubernetes/e2e/features/virtualhost_options/testdata/bad-vho.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualHostOption
metadata:
  name: bad-retries
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: gw
    namespace: default
    sectionName: http
  options:
    retries:
      retryOn: "5xx"
      retryBackOff:
        # We expect to receive an error when the base interval is less than max interval. 
        # ref projects/gloo/pkg/plugins/basicroute/plugin.go
        baseInterval: "1s"
        maxInterval: "1ms"
