test/kubernetes/e2e/features/virtualhost_options/testdata/basic-vho.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualHostOption
metadata:
  name: remove-content-length
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: gw
    namespace: default
  options:
    headerManipulation:
      responseHeadersToRemove:
        - "content-length"
