test/kubernetes/e2e/features/virtualhost_options/testdata/extra-vho-merge.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualHostOption
metadata:
  name: extra-vho-merge
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gw
  options:
    headerManipulation:
      responseHeadersToRemove:
        - "content-type"
    includeAttemptCountInResponse: true
