test/kubernetes/e2e/features/virtualhost_options/testdata/extra-vho.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualHostOption
metadata:
  name: remove-content-type
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: gw
  options:
    headerManipulation:
      responseHeadersToRemove:
        - "content-type"
