test/kubernetes/e2e/features/virtualhost_options/testdata/section-name-vho.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualHostOption
metadata:
  name: add-foo-header
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: gw
    sectionName: http
  options:
    headerManipulation:
      responseHeadersToAdd:
      - header:
          key: foo
          value: bar
